# PolyhedralDataflowIR

./: .gitignore  CMakeCache.txt  CMakeLists-r2.txt  CMakeLists.txt  LICENSE.md  Makefile  README.md  cg_run_all.sh  splatt_run.sh
artifact/: CMakeLists.txt
artifact/data/: mtx_get.sh  tns_get.sh
artifact/include/chill/: BCSRBenchmark.h  matrix_io.h  smv.h  sparse_matrix.h
artifact/include/common/: iegen_util.h
artifact/include/mfd/: MiniFluxBenchmark-fuseAll.h  MiniFluxBenchmark-fuseWithin.h  MiniFluxBenchmark-series.h  MiniFluxUtil.h  miniFluxDiv-fuseAllCLOReduxOverlap.h  miniFluxDiv-fuseWithinDirsCLOREDUX.h  miniFluxDiv-seriesReduceCLO.h
artifact/lib/: build_oski.sh  oski_build.sh  splatt_build.sh
artifact/py/: benchmark.py  mtx2csr.py
artifact/src/chill/: bmark_main.cc  matrix_io.cc  rose_main.cc  smv.cc
artifact/src/mfd/: MiniFluxBenchmark-fuseAll.cc  MiniFluxBenchmark-fuseWithin.cc  MiniFluxBenchmark-series.cc  MiniFluxBenchmark.cc  mfd_fuse_all.cc  mfd_fuse_within.cc  mfd_series.cc
artifact/src/oski/: oski_main.c  xform.txt
artifact/src/pdfl/: coo_csf_insp.c  csr_bsr_insp.c
data/: cg_par.csv  cg_par.out  cg_run.out  cg_run_gpu.csv  cg_run_gpu.out  cp_run.csv  cp_run.out
data/matrix/: impact.mtx
data/tensor/: matmul_5-5-5_r10_lambda.mat  matmul_5-5-5_r10_mode1.mat  matmul_5-5-5_r10_mode2.mat  matmul_5-5-5_r10_mode3.mat  matmul_5-5-5_splatt.txt  run.sh
doc/: debug.txt  grammar.g4
docker/: Dockerfile
doxy-docs/: Doxyfile
doxy-docs/html/: ____init_____8py.html  _a_s_t_8cc.html  _a_s_t_8cc__incl.md5  _a_s_t_8cc_a1cfcff9004270ec085bb4506b605558c_icgraph.md5  _a_s_t_8cc_a33aff7798b885e4212ad4ddcfe7bb976_cgraph.md5  _a_s_t_8cc_a51dd9bf5ac0f229a9797828ea17eff17_cgraph.md5  _a_s_t_8cc_aa64d5a46db1a99281036447f277fa82c_cgraph.md5  _a_s_t_8cc_aa64d5a46db1a99281036447f277fa82c_icgraph.md5  _a_s_t_8cc_abad3ebb9e51611952e3193e95416b59b_cgraph.md5  _a_s_t_8cc_abad3ebb9e51611952e3193e95416b59b_icgraph.md5  _a_s_t_8cc_ad42214b937f1328be90ba74a69337c53_cgraph.md5  _a_s_t_8cc_ad42214b937f1328be90ba74a69337c53_icgraph.md5  _a_s_t_8hh.html  _a_s_t_8hh__dep__incl.md5  _a_s_t_8hh__incl.md5  _a_s_t_8hh_a326add65ef161d06063a9e7acce9d044_icgraph.md5  _a_s_t_8hh_a58ef2e0787f1c7b43161c5d7c8276066_icgraph.md5  _a_s_t_8hh_ace28645956277df98087f7da9dcaf47d_icgraph.md5  _a_s_t_8hh_ae03004e62cebf2a3b737b239117896ce_cgraph.md5  _a_s_t_8hh_ae03004e62cebf2a3b737b239117896ce_icgraph.md5  _a_s_t_8hh_source.html  _b_c_s_r_benchmark_8h.html  _b_c_s_r_benchmark_8h__dep__incl.md5  _b_c_s_r_benchmark_8h__incl.md5  _b_c_s_r_benchmark_8h_source.html  _bag_8c.html  _bag_8c__dep__incl.md5  _bag_8c__incl.md5  _bag_8h.html  _bag_8h__dep__incl.md5  _bag_8h__incl.md5  _bag_8h_source.html  _benchmark_8cc.html  _benchmark_8cc__incl.md5  _benchmark_8cpp.html  _benchmark_8cpp__incl.md5  _benchmark_test_8hpp.html  _benchmark_test_8hpp__dep__incl.md5  _benchmark_test_8hpp__incl.md5  _benchmark_test_8hpp_source.html  (+14988 more)
doxy-docs/latex/: ____init_____8py.tex  _a_s_t_8cc.tex  _a_s_t_8cc__incl.md5  _a_s_t_8cc_a33aff7798b885e4212ad4ddcfe7bb976_cgraph.md5  _a_s_t_8cc_a51dd9bf5ac0f229a9797828ea17eff17_cgraph.md5  _a_s_t_8cc_aa64d5a46db1a99281036447f277fa82c_icgraph.md5  _a_s_t_8cc_abad3ebb9e51611952e3193e95416b59b_cgraph.md5  _a_s_t_8cc_abad3ebb9e51611952e3193e95416b59b_icgraph.md5  _a_s_t_8cc_ad42214b937f1328be90ba74a69337c53_icgraph.md5  _a_s_t_8hh.tex  _a_s_t_8hh__dep__incl.md5  _a_s_t_8hh__incl.md5  _a_s_t_8hh_a2085ba621f4c6f64d0f77e46e202b06a_cgraph.md5  _a_s_t_8hh_a2334af78ccd2295c94719e321bb607f7_icgraph.md5  _a_s_t_8hh_a326add65ef161d06063a9e7acce9d044_icgraph.md5  _a_s_t_8hh_a58ef2e0787f1c7b43161c5d7c8276066_icgraph.md5  _a_s_t_8hh_a82d885acc50ba3395ac9d5a5a9708026_cgraph.md5  _a_s_t_8hh_ace28645956277df98087f7da9dcaf47d_icgraph.md5  _a_s_t_8hh_ae03004e62cebf2a3b737b239117896ce_cgraph.md5  _a_s_t_8hh_ae03004e62cebf2a3b737b239117896ce_icgraph.md5  _b_c_s_r_benchmark_8h.tex  _b_c_s_r_benchmark_8h__dep__incl.md5  _b_c_s_r_benchmark_8h__incl.md5  _bag_8c.tex  _bag_8c__dep__incl.md5  _bag_8c__incl.md5  _bag_8h.tex  _bag_8h__dep__incl.md5  _bag_8h__incl.md5  _benchmark_8cc.tex  _benchmark_8cc__incl.md5  _benchmark_8cpp.tex  _benchmark_8cpp__incl.md5  _benchmark_test_8hpp.tex  _benchmark_test_8hpp__dep__incl.md5  _benchmark_test_8hpp__incl.md5  _c_g_8cc.tex  _c_g_8cc__incl.md5  _c_g_8h.tex  _c_g_8h__dep__incl.md5  (+12742 more)
scripts/: backprop.py  build_vars.py  cg_parse.py  cg_run.sh  cg_run_gpu.sh  chartgen.ipynb  cp_run.sh  cubld.sh  islcodegen.ipynb  matrix_test.ipynb  perfmodel.py  seaborn.ipynb  tftest.py
src/: cgmain.c  iegenlib-test.cpp  main.cpp
src/util/: Lists.hpp  (+10 more)
test/: BenchmarkTest.hpp  ConjGradCOOTest.cpp  ConjGradCSBTest.cpp  ConjGradCSRTest.cpp  ConjGradCSRTest.hpp  ConjGradDIATest.cpp  ConjGradDSRTest.cpp  ConjGradELLTest.cpp  ConjGradTest.cpp  ConjGradTest.hpp  InspExecTest.hpp  JacobiTest.cpp  MiniFluxDivTest.cpp  TACO_Test.cpp  TensAlgCompTest.cpp  TensorDecompTest.cpp  TensorDecompTest.hpp  TensorDecompTestCOO.cpp  TensorDecompTestCSF.cpp  TensorDecompTestHiCOO.cpp  cg_acc.cpp  cg_par.cpp  cp_par.cpp  cpd_par.cpp  eDSLTest.cpp
(+2137 files in other folders)
